--- a/public/styles.css
+++ b/public/styles.css
@@ -1,147 +1,78 @@
-:root {
-    --background-surface: #EFEFEF;
-    --primaryColor: #43281C;
-    --secondaryColor: #333D29;
-    --color3: #7F4F24;
-    --color4: #B08968;
-    --color5: #DDB892;
-    --color6: #EDE0D4;
-    --highlight: #FBF2C6;
-}
 
-body {
-    padding: 0;
-    margin: 0;
-    font-family: 'Open Sans', sans-serif;
-}
 
-body>header {
-    position: fixed;
-    width: 100%;
-    top: 0;
-}
+#container-login {   
+    width: 40%;
+    height: 70%;
+    position: absolute;    
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border-radius: 8px;
+    
+  }  
+  #container-login input,
+  #container-login button {
+    margin: 5px;
+    padding: 10px;
+    border: none;
+    border-radius: 3px;
+    font-size: 14px;
+  }
 
-body>main {
-    margin: auto;
-    margin-top: 60px;
-    max-width: 500px;
-    padding: 0 4px;
-}
+  #container-login label {
+      font-size: 22px;
+      display: block;      
+    
+  }
+  #container-login img {
+    margin: 0 auto;
+    width: 200px;
+    height: 150px;
+    display: block;
+  }
 
-h1 {
-    background-color: var(--primaryColor);
+  #container-login input[type="email"],
+  #container-login input[type="text"],
+  #container-login input[type="password"] {
+    width: 98%;
+    box-sizing: border-box;
+    background-color: #53534b;
+  }
+
+  #container-login button {
+    background-color: #007bff;
+    width: 98%;
     color: white;
-    margin: 0;
-    text-align: center;
-    padding: 10px 0 5px 0;
-    font-size: 20px;
-    font-weight: normal;
-}
+    cursor: pointer;
+  }
 
-a.navlink {
-    color: var(--highlight);
-    padding: 8px;
-    text-decoration: none;
-}
-
-#linkHome {
-    display: block;
-    position: absolute;
-    top: 5px;
-    left: 5px;
-}
-
-#linkOrder {
-    display: block;
-    position: absolute;
-    top: 5px;
-    right: 5px;
-}
-
-section.page {
-    display: none;
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-}
-
-ul#menu {
-    background-color: var(--color6);
-    margin: 4px 6px;
-    padding: 0px 12px;
+  #formContainer{
+    background-color: rgba(209, 203, 189, 0.514);
     border-radius: 10px;
-    box-shadow: 1px 1px 1px silver;
-    padding-bottom: 20px;
-}
+  }
 
-h3 {
-    color: var(--color4);
-    font-weight: normal;
-    padding-top: 15px;
-    font-size: 17px;
-}
 
-button {
-    display: block;
-    background-color: var(--color5);
-    border: 0;
-    width: 80%;
-    margin: 16px 10%;
-    padding: 12px 0;
-    border-radius: 40px;
-    color: var(--color3);
-    font-size: 16px;
-}
-
-h2 {
-    color: var(--secondaryColor);
-    text-align: center;
-    font-weight: normal;
-    font-size: 18px;
-}
-
-#home, #login, #register {
-    text-align: center;
-}
-
-main a.navlink {
-    color: var(--color3);
-    font-weight: bold;
-    text-decoration: underline;
-    margin: 0;
-    padding: 0;
-}
-
-fieldset {
-    background-color: var(--color6);
-    padding: 16px;
-    border: 0;
-    border-radius: 5px;
-    box-shadow: 0px 2px 4px silver;
-}
-
-form label {
-    display: block;
-    color: var(--color3);
-    font-size: 13px;
-    margin-left: 16px;
-    margin-bottom: 4px;
-    text-align: left;
-}
-
-form input {
-    display: block;
-    border: 1px solid var(--color3);
-    width: 94%;
-    padding: 3%;
-    border-radius: 20px;
-    background-color: var(--color2);
-    margin-bottom: 12px;
-}
-
-form input:focus {
-    border-color: var(--color3);
-    background-color: white;
-}
+  /* Para pantallas de menos de 500px */
+@media screen and (max-width: 499px) {
+    #container-login {   
+        width: 85%;  
+        
+      }  
+    
+  }
+  
+  /* Para pantallas entre 500px y 700px */
+  @media screen and (min-width: 500px) and (max-width: 900px) {
+    #container-login {   
+        width: 75%;  
+        
+      }  
+      #container-login form{
+        width: 100%;
+      }
+    
+  }
